cmake file change to build panel library file

--- a/panther_launcher/CMakeLists.txt
+++ b/panther_launcher/CMakeLists.txt
@@ -55,6 +55,8 @@ set(MODULES_TO_CHECK ${MODULES_TO_CHECK} libsoup-2.4)
 set(MODULES_TO_CHECK ${MODULES_TO_CHECK} pango)
 set(MODULES_TO_CHECK ${MODULES_TO_CHECK} pangocairo)
 set(MODULES_TO_CHECK ${MODULES_TO_CHECK} x11)
+set(MODULES_TO_CHECK ${MODULES_TO_CHECK} libxfce4panel-2.0)
+set(MODULES_TO_CHECK ${MODULES_TO_CHECK} libxfconf-0)
 
 pkg_check_modules(DEPS REQUIRED ${MODULES_TO_CHECK})
 
