--- a/greeter/CMakeLists.txt
+++ b/greeter/CMakeLists.txt
@@ -28,7 +28,7 @@ include (CPack)
 add_custom_target (dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
 
 find_package (PkgConfig)
-pkg_check_modules (DEPS REQUIRED granite liblightdm-gobject-1>=1.2.1 gdk-x11-3.0 clutter-gtk-1.0 gdk-pixbuf-2.0 gl)
+pkg_check_modules (DEPS REQUIRED gee-0.8 liblightdm-gobject-1>=1.2.1 gdk-x11-3.0 clutter-gtk-1.0 gdk-pixbuf-2.0 gl)
 add_definitions (${DEPS_CFLAGS})
 link_libraries (${DEPS_LIBRARIES})
 link_directories (${DEPS_LIBRARY_DIRS})
@@ -66,7 +66,7 @@ vala_precompile (VALA_C
 
     ${CMAKE_BINARY_DIR}/src/config.vala
 PACKAGES
-    granite
+    gee-0.8
     liblightdm-gobject-1
     posix
     gdk-pixbuf-2.0
