--- a/greeter/data/greeter.conf
+++ b/greeter/data/greeter.conf
@@ -4,6 +4,7 @@ default-wallpaper=/usr/share/backgrounds/xfce/Natural_Landscape_Alberta_Canada_4
 gtk-theme=enso
 icon-theme=Papirus-GTK
 cursor-theme=capitane-cursors
+blur=false
 #high-contrast=false
 #onscreen-keyboard=false
 #screensaver-timeout=60
