minor changes to panther launcher around size and view

--- a/panther_launcher/CMakeLists.txt
+++ b/panther_launcher/CMakeLists.txt
@@ -76,7 +76,7 @@ endif ()
 add_subdirectory(src/Backend)
 add_subdirectory(po)
 add_subdirectory(src/synapse-core)
-add_subdirectory(panther_applet)
+#add_subdirectory(panther_applet)
 add_subdirectory(data)
 add_subdirectory(src/synapse-plugins)
 add_subdirectory(data/icons)
