--- a/panther_launcher/src/CMakeLists.txt
+++ b/panther_launcher/src/CMakeLists.txt
@@ -71,6 +71,7 @@ set (APP_SOURCES ${APP_SOURCES} Widgets/SearchItem.vala)
 set (APP_SOURCES ${APP_SOURCES} Widgets/SearchView.vala)
 set (APP_SOURCES ${APP_SOURCES} Widgets/Sidebar.vala)
 set (APP_SOURCES ${APP_SOURCES} Widgets/Switcher.vala)
+set (APP_SOURCES ${APP_SOURCES} Widgets/UserView.vala)
 set (APP_SOURCES ${APP_SOURCES} synapse-core/common-actions.vala)
 set (APP_SOURCES ${APP_SOURCES} synapse-core/config-service.vala)
 set (APP_SOURCES ${APP_SOURCES} synapse-core/data-sink.vala)
