add brightness setting to config file

--- a/greeter/data/greeter.conf
+++ b/greeter/data/greeter.conf
@@ -5,6 +5,7 @@ gtk-theme=enso
 icon-theme=Papirus-GTK
 cursor-theme=capitane-cursors
 blur=false
+brightness=1.0
 #high-contrast=false
 #onscreen-keyboard=false
 #screensaver-timeout=60
