add alternative alt tab into main code

--- a/galal/src/Makefile.am
+++ b/galal/src/Makefile.am
@@ -71,6 +71,9 @@ gala_VALASOURCES = \
 	Widgets/WorkspaceClone.vala \
 	Widgets/WorkspaceInsertThumb.vala \
 	Deepin/DeepinBlurEffect.vala \
+	Enso/PreviewRow.vala \
+	Enso/WindowSwitcher.vala \
+	Enso/PreviewPage.vala \
 	$(NULL)
 
 nodist_gala_SOURCES = \
