amend README file and add launchy settings view

--- a/desktop-settings/src/CMakeLists.txt
+++ b/desktop-settings/src/CMakeLists.txt
@@ -26,6 +26,7 @@ vala_precompile (VALA_C ${PLUGNAME}
     Views/Dock.vala
     Views/HotCorners.vala
     Views/Wallpaper.vala
+    Views/Launchy.vala
     Widgets/SolidColorContainer.vala
     Widgets/WallpaperContainer.vala
     ${CMAKE_CURRENT_BINARY_DIR}/config.vala
