change desktop main file name instance

--- a/desktop-settings/src/CMakeLists.txt
+++ b/desktop-settings/src/CMakeLists.txt
@@ -20,7 +20,7 @@ include (ValaPrecompile)
 # Add all your vala files and requires packages to the List below to include them in the build
 vala_precompile (VALA_C ${PLUGNAME}
     Cache.vala
-    desktop-plug.vala
+    Desktop.vala
     DesktopWindow.vala
     GalaSettings.vala
     Views/Dock.vala
