fix for Gtk theme errors in 3.22 and datetimte plug

--- a/datetime-applet/data/CMakeLists.txt
+++ b/datetime-applet/data/CMakeLists.txt
@@ -1,2 +1,2 @@
-#install(FILES ${CMAKE_CURRENT_BINARY_DIR}/datetime.desktop DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/xfce4/panel/plugins)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/datetime.desktop DESTINATION ${CMAKE_INSTALL_FULL_DATAROOTDIR}/xfce4/panel/plugins)
 
