--- a/greeter/data/greeter.conf
+++ b/greeter/data/greeter.conf
@@ -2,7 +2,7 @@
 #activate-numlock=true
 default-wallpaper=/usr/share/backgrounds/xfce/Natural_Landscape_Alberta_Canada_4k.jpg
 gtk-theme=enso
-icon-theme=Papirus-GTK
+icon-theme=Paper
 cursor-theme=capitane-cursors
 blur=false
 brightness=7
