--- a/galal/src/meson.build
+++ b/galal/src/meson.build
@@ -37,6 +37,8 @@ gala_bin_sources = files(
 	'Widgets/WindowSwitcher.vala',
 	'Widgets/WorkspaceClone.vala',
 	'Widgets/WorkspaceInsertThumb.vala',
+	'Enso/BlurActor.vala',
+	'Enso/RendererInfo.vala',
 	'Enso/PreviewPage.vala',
 	'Enso/PreviewRow.vala',
 	'Enso/WindowSwitcher.vala',
