update greeter to meson and change default values

--- a/greeter/data/pantheon-greeter.conf
+++ b/greeter/data/pantheon-greeter.conf
@@ -4,7 +4,7 @@ default-wallpaper=/usr/share/backgrounds/xfce/Natural_Landscape_Alberta_Canada_4
 gtk-theme=enso
 icon-theme=Paper
 cursor-theme=capitane-cursors
-blur=false
+blur=true
 brightness=7
 #high-contrast=false
 #onscreen-keyboard=false
