add time and date config settings

--- a/greeter/data/pantheon-greeter.conf
+++ b/greeter/data/pantheon-greeter.conf
@@ -6,6 +6,8 @@ icon-theme=Paper
 cursor-theme=capitane-cursors
 blur=true
 brightness=7
+time-format="%l:%M"
+date-format="%A, %B %e"
 #high-contrast=false
 #onscreen-keyboard=false
 #screensaver-timeout=60
