update vapi files

--- a/galal/meson.build
+++ b/galal/meson.build
@@ -1,7 +1,7 @@
 project('gala',
 	'c', 'vala',
 	version: '0.3.1',
-	meson_version: '>= 0.42.0',
+	meson_version: '>= 0.45.0',
 	license: 'GPL3',
 )
 
@@ -111,7 +111,6 @@ granite_dep = dependency('granite')
 gnome_desktop_dep = dependency('gnome-desktop-3.0')
 gsd_dep = dependency('gnome-settings-daemon', version: '>= @0@'.format(gsd_version_required))
 m_dep = cc.find_library('m', required: false)
-xfconf_dep = dependency('libxfconf-0')
 
 mutter_dep = []
 libmutter_dep = []
@@ -223,6 +222,59 @@ if mutter328_dep.found()
 		dependency('mutter-cogl-path-2'), dependency('mutter-clutter-2')
 	]
 	vala_flags += ['--define', 'HAS_MUTTER320', '--define', 'HAS_MUTTER322', '--define', 'HAS_MUTTER324', '--define', 'HAS_MUTTER326', '--define', 'HAS_MUTTER328']
+	add_project_arguments(['-DCLUTTER_ENABLE_COMPOSITOR_API', '-DCLUTTER_ENABLE_EXPERIMENTAL_API',
+		'-DCOGL_ENABLE_EXPERIMENTAL_API', '-DCOGL_ENABLE_EXPERIMENTAL_2_0_API'], language: 'c')
+endif
+
+
+mutter330_dep = dependency('libmutter-3', version: ['>= 3.29.4', '< 3.31'], required: false)
+if mutter330_dep.found()
+	libmutter_dep = dependency('libmutter-3', version: '>= 3.29.4')
+	mutter_dep = [
+		libmutter_dep,
+		dependency('mutter-cogl-3'), dependency('mutter-cogl-pango-3'),
+		dependency('mutter-cogl-path-3'), dependency('mutter-clutter-3')
+	]
+	vala_flags = ['--define', 'HAS_MUTTER330']
+	add_project_arguments(['-DCLUTTER_ENABLE_COMPOSITOR_API', '-DCLUTTER_ENABLE_EXPERIMENTAL_API',
+		'-DCOGL_ENABLE_EXPERIMENTAL_API', '-DCOGL_ENABLE_EXPERIMENTAL_2_0_API'], language: 'c')
+endif
+
+mutter332_dep = dependency('libmutter-4', version: ['>= 3.31.2', '< 3.34'], required: false)
+if mutter332_dep.found()
+	libmutter_dep = dependency('libmutter-4', version: '>= 3.31.2')
+	mutter_dep = [
+		libmutter_dep,
+		dependency('mutter-cogl-4'), dependency('mutter-cogl-pango-4'),
+		dependency('mutter-cogl-path-4'), dependency('mutter-clutter-4')
+	]
+	vala_flags = ['--define', 'HAS_MUTTER330', '--define', 'HAS_MUTTER332']
+	add_project_arguments(['-DCLUTTER_ENABLE_COMPOSITOR_API', '-DCLUTTER_ENABLE_EXPERIMENTAL_API',
+		'-DCOGL_ENABLE_EXPERIMENTAL_API', '-DCOGL_ENABLE_EXPERIMENTAL_2_0_API'], language: 'c')
+endif
+
+mutter334_dep = dependency('libmutter-5', version: ['>= 3.34', '< 3.35.1'], required: false)
+if mutter334_dep.found()
+	libmutter_dep = dependency('libmutter-5', version: '>= 3.34')
+	mutter_dep = [
+		libmutter_dep,
+		dependency('mutter-cogl-5'), dependency('mutter-cogl-pango-5'),
+		dependency('mutter-cogl-path-5'), dependency('mutter-clutter-5')
+	]
+	vala_flags = ['--define', 'HAS_MUTTER330', '--define', 'HAS_MUTTER332', '--define', 'HAS_MUTTER334']
+	add_project_arguments(['-DCLUTTER_ENABLE_COMPOSITOR_API', '-DCLUTTER_ENABLE_EXPERIMENTAL_API',
+		'-DCOGL_ENABLE_EXPERIMENTAL_API', '-DCOGL_ENABLE_EXPERIMENTAL_2_0_API'], language: 'c')
+endif
+
+mutter336_dep = dependency('libmutter-6', version: ['>= 3.35.1', '< 3.38'], required: false)
+if mutter336_dep.found()
+	libmutter_dep = dependency('libmutter-6', version: '>= 3.35.1')
+	mutter_dep = [
+		libmutter_dep,
+		dependency('mutter-cogl-6'), dependency('mutter-cogl-pango-6'),
+		dependency('mutter-cogl-path-6'), dependency('mutter-clutter-6')
+	]
+	vala_flags = ['--define', 'HAS_MUTTER330', '--define', 'HAS_MUTTER332', '--define', 'HAS_MUTTER334', '--define', 'HAS_MUTTER336']
 	add_project_arguments(['-DCLUTTER_ENABLE_COMPOSITOR_API', '-DCLUTTER_ENABLE_EXPERIMENTAL_API',
 		'-DCOGL_ENABLE_EXPERIMENTAL_API', '-DCOGL_ENABLE_EXPERIMENTAL_2_0_API'], language: 'c')
 endif
