galal work for notify and mutter

--- a/galal/meson.build
+++ b/galal/meson.build
@@ -181,6 +181,7 @@ subdir('daemon')
 subdir('plugins/maskcorners')
 subdir('plugins/pip')
 subdir('plugins/template')
+subdir('plugins/notify')
 subdir('plugins/zoom')
 if get_option('documentation')
 	subdir('docs')
