remove xfconf settings

--- a/galal/plugins/notify/meson.build
+++ b/galal/plugins/notify/meson.build
@@ -3,7 +3,7 @@ gala_notify_sources = [
     'Main.vala',
     'Bubble.vala',
     'Confirmation.vala',
-    'DBus.vala',
+    'NotifyServer.vala',
     'Widgets/MaskedImage.vala',
 ]
 
