--- a/greeter/data/pantheon-greeter.conf
+++ b/greeter/data/pantheon-greeter.conf
@@ -1,13 +1,14 @@
 [greeter]
 #activate-numlock=true
-default-wallpaper=/usr/share/backgrounds/xfce/Natural_Landscape_Alberta_Canada_4k.jpg
+default-wallpaper=/usr/share/backgrounds/login.png
+use-default-wallpaper=false
 gtk-theme=enso
 icon-theme=Paper
 cursor-theme=capitane-cursors
 blur=true
 brightness=7
-time-format="%l:%M"
-date-format="%A, %B %e"
+time-format=%l:%M
+date-format=%A, %B %e
 #high-contrast=false
 #onscreen-keyboard=false
 #screensaver-timeout=60
