Conf. set up in a reasonable way, UserLogin commented

--- a/greeter/data/pantheon-greeter.conf
+++ b/greeter/data/pantheon-greeter.conf
@@ -1,7 +1,7 @@
 [greeter]
 #activate-numlock=true
 default-wallpaper=/usr/share/backgrounds/login.png
-use-default-wallpaper=false
+#use-default-wallpaper=true
 gtk-theme=enso
 icon-theme=Paper
 cursor-theme=capitane-cursors
