add setting to support new notification server

--- a/galal/plugins/notify/meson.build
+++ b/galal/plugins/notify/meson.build
@@ -4,6 +4,7 @@ gala_notify_sources = [
     'Bubble.vala',
     'Confirmation.vala',
     'NotifyServer.vala',
+	'NotifySettings.vala',
     'Widgets/MaskedImage.vala',
 ]
 
